--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
     <form action="/" method="post">
 <input type="text" placeholder="Input Country name" name="country">
-<button type="submit">locate</button>
+<button type="submit">Check</button>
 
 
     </form>
